force-app/main/default/objects/ContentVersion/fields/Category__c.field-meta.xml
<CustomField>
    <fullName>Category__c</fullName>
    <description>User can decide which category the file is applicable to</description>
    <label>Category</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Fraud</fullName>
            </value>
            <value>
                <fullName>Other</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>