force-app/main/default/objects/ContentVersion/fields/Sub_Category__c.field-meta.xml
<CustomField>
    <fullName>Sub_Category__c</fullName>
    <label>Sub Category</label>
    <type>Picklist</type>
    <valueSet>
        <controllingField>Category__c</controllingField>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>No Classification Required</fullName>
            </value>
            <value>
                <fullName>Fraud Management Plan</fullName>
            </value>
            <value>
                <fullName>Fraud Risk Assessment</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>