force-app/main/default/objects/ContentVersion/fields/uxgovuk__Guest_Record_fileupload__c.field-meta.xml
<CustomField>
    <fullName>uxgovuk__Guest_Record_fileupload__c</fullName>
    <label>Guest Record</label>
    <length>255</length>
    <type>Text</type>
</CustomField>